run fizzbuzz program from 0 to 100

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "scripts": {
     "start": "node index.js",
+    "fizzbuzz": "node ./katafizzbuzz/index.js",
     "test": "jest --watchAll --coverage"
   }
 }
