--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "scripts": {
     "start": "node index.js",
     "fizzbuzz": "node ./katafizzbuzz/index.js",
+    "foobarqix": "node ./foobarqix/index.js",
     "test": "jest --watchAll --coverage"
   }
 }
